# smart-agent

./: .env  .gitignore  CLAUDE.md  HISTORY.md  UPDATE.md  chunking_strategy.md  config.py  docker-compose.yml  document_type.md  domain_type.md  hierarchical_rag.md  main.py  metadata.md  pyproject.toml  requirements.txt  storage_strategy.md
.omc/: project-memory.json
api/: README.md  config.py  main.py  requirements.txt
demo/: Dockerfile  README.md  docker-compose.yml  requirements.txt
parser/: README.md  config.py  docker-compose.yml  log_config.py  main.py  pyproject.toml  requirements.txt
parser/db/: __init__.py
parser/document_integrator/: __init__.py  llm.py  opensearch.py
parser/document_parser/: __init__.py  flat_parser.py  image_parser.py  llm.py  minio_helper.py  models.py  pdf_classifier.py  pdf_image.py  pdf_text.py  pptx_parser.py
parser/format_converter/: __init__.py  converter.py  detector.py  uploader.py
parser/index_parser/: __init__.py  heading_extractor.py  llm.py  models.py
parser/section_parser/: __init__.py  embedder.py  llm.py  opensearch.py
parser/structurer/: __init__.py  llm.py  models.py
parser/workflow/: __init__.py  job_store.py  runner.py
retriever/: README.md  __init__.py  config.py  main.py  models.py  requirements.txt
skeleton/: CLAUDE.md
tests/: docker-compose.yml  parsed_output.md  preprocess_parsed_output.py  test.md  test_chunking_comparison.py  test_chunking_strategy.py  test_docling_similarity.py  test_multi_proposition.py  test_paragraph_similarity.py  test_paragraph_token_dist.py  test_toc_chunking.py  (+4 more)
(+3720 files in other folders)
